feat:改善用户模块，并完成图片模块

--- a/imgify-server/src/main/resources/application.yml
+++ b/imgify-server/src/main/resources/application.yml
@@ -6,6 +6,8 @@ server:
 spring:
   application:
     name: imgify-server
+  profiles:
+    active: local
   # 数据库配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -35,4 +37,11 @@ mybatis-plus:
       logic-delete-field: isDelete # 全局逻辑删除的实体字段名
       logic-delete-value: 1 # 逻辑已删除值（默认为 1）
       logic-not-delete-value: 0 # 逻辑未删除值（默认为 0）
-
+# 存储对象配置
+#cos:
+#  client:
+#    host:      # 存储桶域名
+#    secretId:  # SecretId
+#    secretKey: # SecretKey
+#    region:    # 存储桶地域
+#    bucket:    # 存储桶名称
