--- a/imgify-client/package.json
+++ b/imgify-client/package.json
@@ -14,15 +14,18 @@
     "openapi": "node openapi.config.js"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.1",
     "ant-design-vue": "^4.2.6",
     "axios": "^1.10.0",
     "dayjs": "^1.11.13",
+    "file-saver": "^2.0.5",
     "pinia": "^2.2.6",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^22.9.3",
     "@umijs/openapi": "^1.13.15",
     "@vitejs/plugin-vue": "^5.2.1",
