--- a/imgify-server/.gitignore
+++ b/imgify-server/.gitignore
@@ -4,6 +4,9 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+### Custome ###
+application-local.yml
+
 ### STS ###
 .apt_generated
 .classpath
